<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalculateActivity">

    <TextView
        android:id="@+id/titleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:text="@string/title_field"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/labelData1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleField"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textStart"
        android:text="@string/title_field"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/data1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelData1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="1"
        android:hint="@string/ex_11"
        android:inputType="number"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/labelData2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textStart"
        android:text="@string/title_field"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelData2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="1"
        android:inputType="numberDecimal"
        android:hint="@string/ex_10"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/labelData3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/data2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textStart"
        android:text="@string/title_field"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/data3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/labelData3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="1"
        android:inputType="numberDecimal"
        android:hint="@string/ex_10"
        android:minHeight="48dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_below="@+id/data3"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/btnCalculate"
        android:text="@string/calculate"
        android:layout_height="60dp"/>

    <TextView
        android:id="@+id/resultCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/btnCalculate"
        android:padding="20dp"
        android:text="@string/result_calculate"
        android:textAlignment="center"
        android:textSize="20sp" />
</RelativeLayout>